--- a/image/index.html
+++ b/image/index.html
@@ -43,6 +43,8 @@
         <div class="container-fluid">
             <div class="brand">
                 <a href="index.html">
+                    <i class="fa fa-star-o" aria-hidden="true"></i>
+
                     SarahDEVS
                 </a>
             </div>
@@ -54,7 +56,7 @@
                     <li><a href="#portfolio" class="link">Portfolio</a></li>
                     <li><a href="#pencil-testimonials" class="link">Testiomnials</a></li>
                     <li><a href="#contact-me" class="link">contact</a></li>
-										<li class="social"><a href="http://facebook.com"><i class="fa fa-facebook"></i></a></li>
+								
                     <li class="social"><a href="http://twitter.com"><i class="fa fa-twitter"></i></a></li>
                     <li class="social"><a href="http://linkedin.com"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
@@ -200,8 +202,8 @@
                 <div class="portfolio-items" id="grid">
                     <div class="col-md-4 col-sm-6 col-xs-6" data-groups='["graphic"]'>
                         <div class="img-thumb margin-desktop">
-                            <a style="z-index:500" href="images/portfolio.jpg" data-lightbox="gallery">
-                                <img class="img-responsive" src="images/portfolio.jpg" alt="portfolio" data-animation="animated rotateInDownLeft" />
+                            <a style="z-index:500" href="images/pc.png" data-lightbox="gallery">
+                                <img class="img-responsive" src="images/pc.png" alt="portfolio" data-animation="animated rotateInDownLeft" />
                             </a>
                         </div>
                     </div>
@@ -407,10 +409,8 @@
                         All rights reserved © 2017
                     </p>
                     <div class="social-icons">
-                        <a href="#"><span class="fa fa-facebook"></span></a>
+                        <a href="#"><span class="fa fa-linkedin"></span></a>
                         <a href="#"><span class="fa fa-twitter"></span></a>
-                        <a href="#"><span class="fa fa-pinterest-p"></span></a>
-                        <a href="#"><span class="fa fa-youtube"></span></a>
                     </div>
                 </div>
             </div>
