updated social links

--- a/image/index.html
+++ b/image/index.html
@@ -100,12 +100,7 @@
                 <div class="col-md-7 col-sm-12">
                     <div class="about-content">
                         <h2 class="background">About Me</h2>
-                        <p>I'm A Professional Front-End Developer. My Passion Is Designing Web Pages. I have More Than Five Years Working Experience In This field.</p>
-                        <p>
-                            whereas multidisciplinary intellectual capital. Distinctively synergize market-driven master and prospective channels. Dramatically drive an expanded array of expertise with modern technology. Completely cultivate standardized manufactured.
-                        </p>
-                        <p>
-                            Continually transform process-centric systems rather than compelling growth strategies. Energistically streamline low-risk high-yield supply chains via scalable intellectual capital.
+                        <p>I'm an English major turned freelance Front-End Developer with a passion for writing elegant code. I specialize in developing clean, beautiful webpages for small businesses, nonprofit organizations, and artists. Got a story to share? Let me help you write it in HTML, CSS, and JavaScript!</p>
                         </p>
                         <a class="button" href="#">Download CV</a>
                     </div>
