added portfolio pieces

--- a/image/index.html
+++ b/image/index.html
@@ -197,22 +197,22 @@
                 <div class="portfolio-items" id="grid">
                     <div class="col-md-4 col-sm-6 col-xs-6" data-groups='["graphic"]'>
                         <div class="img-thumb margin-desktop">
-                            <a style="z-index:500" href="images/pc.png" data-lightbox="gallery">
-                                <img class="img-responsive" src="images/pc.png" alt="portfolio" data-animation="animated rotateInDownLeft" />
+                            <a style="z-index:500" href="images/privatecollections.png" data-lightbox="gallery">
+                                <img class="img-responsive" src="images/privatecollections.png" alt="portfolio" data-animation="animated rotateInDownLeft" />
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-6" data-groups='["coding"]'>
                         <div class="img-thumb margin-desktop">
-                            <a style="z-index:500" href="images/portfolio.jpg" data-lightbox="gallery">
-                                <img class="img-responsive" src="images/portfolio.jpg" alt="portfolio" data-animation="animated rotateInDownLeft" />
+                            <a style="z-index:500" href="images/pinnacle.png" data-lightbox="gallery">
+                                <img class="img-responsive" src="images/pinnacle.png" alt="portfolio" data-animation="animated rotateInDownLeft" />
                             </a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-6" data-groups='["design"]'>
                         <div class="img-thumb margin-desktop">
-                            <a style="z-index:500" href="images/portfolio.jpg" data-lightbox="gallery">
-                                <img class="img-responsive" src="images/portfolio.jpg" alt="portfolio" data-animation="animated rotateInDownLeft" />
+                            <a style="z-index:500" href="images/pico.png" data-lightbox="gallery">
+                                <img class="img-responsive" src="images/pico.png" alt="portfolio" data-animation="animated rotateInDownLeft" />
                             </a>
                         </div>
                     </div>
