--- a/image/index.html
+++ b/image/index.html
@@ -56,9 +56,8 @@
                     <li><a href="#portfolio" class="link">Portfolio</a></li>
                     <li><a href="#pencil-testimonials" class="link">Testiomnials</a></li>
                     <li><a href="#contact-me" class="link">contact</a></li>
-								
-                    <li class="social"><a href="http://twitter.com"><i class="fa fa-twitter"></i></a></li>
-                    <li class="social"><a href="http://linkedin.com"><i class="fa fa-linkedin"></i></a></li>
+								    
+
                 </ul>
                 <div class="menu-trigger">
                     <div class="menu-bar">
@@ -84,6 +83,10 @@
                 <h1>hi, I'm Sarah </h1>
                 <p>front-end web developer</p>
                 <a class="button" href="#contact-me">contact me</a>
+                <ul class="social-icons">
+                   <a href="https://linkedin.com/in/sjmontoro/"><i class="fa fa-linkedin fa-3x"></i></a>
+                   <a href="https://github.com/smontoro"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                </ul>
             </div>
         </div>
     </section>
@@ -404,8 +407,8 @@
                         All rights reserved © 2017
                     </p>
                     <div class="social-icons">
-                        <a href="#"><span class="fa fa-linkedin"></span></a>
-                        <a href="#"><span class="fa fa-twitter"></span></a>
+                        <a href="https://linkedin.com/in/sjmontoro/"><span class="fa fa-linkedin"></span></a>
+                        <a href="https://github.com/smontoro"><span class="fa fa-github"></span></a>
                     </div>
                 </div>
             </div>
