added to portfolio images

--- a/image/index.html
+++ b/image/index.html
@@ -221,8 +221,8 @@
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-6" data-groups='["graphic"]'>
                         <div class="img-thumb margin-desktop">
-                            <a style="z-index:500" href="images/portfolio.jpg" data-lightbox="gallery">
-                                <img class="img-responsive" src="images/portfolio.jpg" alt="portfolio" data-animation="animated rotateInDownLeft" />
+                            <a style="z-index:500" href="images/liquidgem.png" data-lightbox="gallery">
+                                <img class="img-responsive" src="images/liquidgem.png" alt="portfolio" data-animation="animated rotateInDownLeft" />
                             </a>
                         </div>
                     </div>
